# nitro_temp

apps/lineCurve/: .gitignore  Makefile  Parameters.hpp  exampleList.txt  input.txt  lineCurve.cpp
apps/lineSurface/: .gitignore  CMakeLists.txt  Makefile  Parameters.hpp  exampleList.txt  input.txt  lineSurface.cpp
doc/: flowchart.pptx
src/: Curve.hpp  CurveLagrange.ipp  CurveMonomial.ipp  Input.hpp  LineIntersector.hpp  LineIntersector.ipp  MovingLines.hpp  MovingLinesCurve.ipp  MovingLinesSurface.ipp  PropertiesParser.hpp  Surface.hpp  SurfaceTensorLagrange.ipp  SurfaceTensorMonomial.ipp
